<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="80dp"
        android:paddingHorizontal="60dp"
        >


        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ms_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />


        <RadioGroup
            android:id="@+id/difficultyGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:checkedButton="@id/radioButtonEasy"

            android:paddingHorizontal="30dp">

            <RadioButton
                android:id="@+id/radioButtonEasy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:layout_gravity="center_horizontal"

                />

            <RadioButton
                android:id="@+id/radioButtonNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/normal"
                />

            <RadioButton
                android:id="@+id/radioButtonHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/hard"
                />

        </RadioGroup>


        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="26sp"
            android:text="@string/play_button"
            android:background="@drawable/roundedbutton"
            android:onClick="playButtonClicked"/>


    </LinearLayout>

</RelativeLayout>
