<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="100dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/leaderboards"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/congratulations"
            android:textSize="36sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/new_highScore"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/enter_name_prompt"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="casual"
            android:textStyle="italic"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="40dp"
            />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/submit"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@drawable/roundedbutton"
            />


    </LinearLayout>

</RelativeLayout>


