<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="40dp"
        android:paddingHorizontal="20dp"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#AE4040"
            android:columnCount="3"
            android:rowCount="2"
            >

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/mines_left"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_columnWeight="1">
            </TextView>

            <ImageView
                android:id="@+id/restartIcon"
                android:src="@drawable/restart_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_rowSpan="2"
                android:layout_gravity="center"
                android:layout_columnWeight="1"
                android:onClick="restartIconClicked"
                />

            <TextView
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/timer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_columnWeight="1">
            </TextView>

            <!-- Second Row -->
            <TextView
                android:id="@+id/minesLeftTextView"
                android:layout_column="0"
                android:layout_row="1"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_columnWeight="1"
               >
            </TextView>

            <TextView
                android:id="@+id/timerTextView"
                android:layout_column="2"
                android:layout_row="1"
                android:text="00:00"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_columnWeight="1">
            </TextView>


        </GridLayout>

        <GridView
            android:id="@+id/gridView"
            android:background="@color/colorAccent"
            android:numColumns="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/devWin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dev - Win"
                android:onClick="devWinButtonPressed">

            </Button>

            <Button
                android:id="@+id/devGameLoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dev - Loss"
                android:onClick="devLoseButtonPressed">

            </Button>

            <TextView
                android:id="@+id/devResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/game_result">

            </TextView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
